--- a/assets/pyqt/icons.qrc
+++ b/assets/pyqt/icons.qrc
@@ -1,5 +1,10 @@
 <RCC>
   <qresource prefix="/">
+    <file>icons/notificationdark.svg</file>
+    <file>icons/profiledark.svg</file>
+    <file>icons/menudark.svg</file>
+    <file>icons/morepurple.svg</file>
+    <file>icons/menulight.svg</file>
     <file>icons/analyticslight.svg</file>
     <file>icons/monitoringlight.svg</file>
     <file>icons/financedark.svg</file>
