--- a/assets/Qt/mainwindow.ui
+++ b/assets/Qt/mainwindow.ui
@@ -258,7 +258,7 @@ QToolButton:disabled {
                       <string/>
                      </property>
                      <property name="pixmap">
-                      <pixmap resource="../images/images.qrc">:/logomin.png</pixmap>
+                      <pixmap>:/logomin.png</pixmap>
                      </property>
                      <property name="scaledContents">
                       <bool>true</bool>
@@ -531,7 +531,7 @@ QToolButton:disabled {
                       <string/>
                      </property>
                      <property name="pixmap">
-                      <pixmap resource="../images/images.qrc">:/logomax.png</pixmap>
+                      <pixmap>:/logomax.png</pixmap>
                      </property>
                      <property name="scaledContents">
                       <bool>true</bool>
@@ -564,7 +564,7 @@ QToolButton:disabled {
                  <string>   Dashboard</string>
                 </property>
                 <property name="icon">
-                 <iconset resource="../icons/icons.qrc">
+                 <iconset>
                   <normaloff>:/dashboardlight.svg</normaloff>
                   <activeon>:/dashboarddark.svg</activeon>
                   <selectedon>:/dashboarddark.svg</selectedon>:/dashboardlight.svg</iconset>
@@ -604,7 +604,7 @@ QToolButton:disabled {
                  <string>   Analytics</string>
                 </property>
                 <property name="icon">
-                 <iconset resource="../icons/icons.qrc">
+                 <iconset>
                   <normaloff>:/analyticslight.svg</normaloff>
                   <activeon>:/analyticsdark.svg</activeon>:/analyticslight.svg</iconset>
                 </property>
@@ -832,7 +832,7 @@ QToolButton:hover {
                    <string>PushButton</string>
                   </property>
                   <property name="icon">
-                   <iconset resource="../icons/icons.qrc">
+                   <iconset>
                     <normaloff>:/menudark.svg</normaloff>:/menudark.svg</iconset>
                   </property>
                   <property name="iconSize">
@@ -928,7 +928,7 @@ border: none;
                <string>...</string>
               </property>
               <property name="icon">
-               <iconset resource="../icons/icons.qrc">
+               <iconset>
                 <normaloff>:/notificationdark.svg</normaloff>:/notificationdark.svg</iconset>
               </property>
               <property name="iconSize">
@@ -951,7 +951,7 @@ border: none;
                <string>...</string>
               </property>
               <property name="icon">
-               <iconset resource="../icons/icons.qrc">
+               <iconset>
                 <normaloff>:/profiledark.svg</normaloff>:/profiledark.svg</iconset>
               </property>
               <property name="iconSize">
@@ -974,7 +974,7 @@ border: none;
                <string>...</string>
               </property>
               <property name="icon">
-               <iconset resource="../icons/icons.qrc">
+               <iconset>
                 <normaloff>:/morepurple.svg</normaloff>:/morepurple.svg</iconset>
               </property>
               <property name="iconSize">
@@ -1361,7 +1361,7 @@ QToolButton:hover {
                            <string>View Category</string>
                           </property>
                           <property name="icon">
-                           <iconset resource="../icons/icons.qrc">
+                           <iconset>
                             <normaloff>:/walletlight.svg</normaloff>:/walletlight.svg</iconset>
                           </property>
                           <property name="iconSize">
@@ -1547,7 +1547,7 @@ QToolButton:hover {
                            <string>View Category</string>
                           </property>
                           <property name="icon">
-                           <iconset resource="../icons/icons.qrc">
+                           <iconset>
                             <normaloff>:/savingslight.svg</normaloff>:/savingslight.svg</iconset>
                           </property>
                           <property name="iconSize">
@@ -2164,7 +2164,7 @@ border-radius:20
                  <rect>
                   <x>0</x>
                   <y>0</y>
-                  <width>760</width>
+                  <width>680</width>
                   <height>787</height>
                  </rect>
                 </property>
