--- a/assets/Qt/signin_signup.ui
+++ b/assets/Qt/signin_signup.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>900</width>
-    <height>659</height>
+    <height>600</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -15,6 +15,18 @@
     <horstretch>0</horstretch>
     <verstretch>0</verstretch>
    </sizepolicy>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>900</width>
+    <height>600</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>900</width>
+    <height>600</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
@@ -39,7 +51,7 @@
     <item>
      <widget class="QStackedWidget" name="stackedWidget">
       <property name="currentIndex">
-       <number>0</number>
+       <number>1</number>
       </property>
       <widget class="QWidget" name="page">
        <layout class="QHBoxLayout" name="horizontalLayout_3">
@@ -93,7 +105,7 @@
               <string/>
              </property>
              <property name="pixmap">
-              <pixmap>../images/logomin.png</pixmap>
+              <pixmap>../../../../../../.designer/images/logomin.png</pixmap>
              </property>
              <property name="scaledContents">
               <bool>true</bool>
@@ -1495,7 +1507,7 @@ background-color: transparent
                 <string/>
                </property>
                <property name="pixmap">
-                <pixmap>../images/logomin.png</pixmap>
+                <pixmap>../../../../../../.designer/images/logomin.png</pixmap>
                </property>
                <property name="scaledContents">
                 <bool>true</bool>
