refactor: remove unused files and reorganize project structure by moving components to core directory

--- a/assets/images/images.qrc
+++ b/assets/images/images.qrc
@@ -2,5 +2,6 @@
   <qresource prefix="/">
     <file>logomax.png</file>
     <file>logomin.png</file>
+    <file>budgeIT_logo.png</file>
   </qresource>
 </RCC>
