refactor: remove BudgeIT.spec and update logo references in main_window to use new budgeIT.png

--- a/budgeit/assets/images/images.qrc
+++ b/budgeit/assets/images/images.qrc
@@ -3,5 +3,6 @@
     <file>logomax.png</file>
     <file>logomin.png</file>
     <file>budgeIT_logo.png</file>
+    <file>budgeIT.png</file>
   </qresource>
 </RCC>
